tests/ui/lang-items/start_lang_item_args.argc.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:79:38
   |
LL | fn start<T>(_main: fn() -> T, _argc: i8, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                                      ^^ expected `isize`, found `i8`
   |
   = note: expected signature `fn(fn() -> _, isize, _, _) -> _`
              found signature `fn(fn() -> _, i8, _, _) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
